--- a/templates/config.html
+++ b/templates/config.html
@@ -34,11 +34,14 @@
       </div>
       <div id="side">
         <h2>リンク</h2>
-        <a href="help.html"><p>Help</p></a>
-        <a href="/mine/query"><p>Query</p></a>
-        <a href="/mine/line"><p>URL変換</p></a>
-        <a href="/accounts/login"><p>ログイン</p></a>
-        <a href="/accounts/logout"><p>ログアウト</p></a>
+    <h2>リンク</h2>
+    <a href="help.html"><p>Help</p></a>
+    <a href="/mine/query"><p>Query</p></a>
+    <a href="/mine/line"><p>URL変換</p></a>
+    <a href="/accounts/login"><p>ログイン</p></a>
+    <a href="/accounts/logout"><p>ログアウト</p></a>
+    <a href="/mine/script"><p>スクリプトの実行</p></a>
+    <a href="/mine/code"><p>コードの設定</p></a>
     </div>
       <div id="con">
       <h2>概要</h2>
