--- a/templates/profile.html
+++ b/templates/profile.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
     <meta charset="utf-8"/>
-    <title>コードの設定変更</title>
+    <title>プロファイル実行</title>
     <style>
         #sidebar {
         float:right;
@@ -29,10 +29,10 @@
 </head>
 <body>
 <div id="header">
-    <h2>コードの設定変更</h2>
+    <h2>プロファイル実行</h2>
 </div>
 <div id="content">
-    <p>コードの設定変更を適用します。</p>
+    <p>サイトに書かれているプロファイルを実行します</p>
     <h2>{{ script }}</h2>
     <p>{{ script_field }}</p>
     <tt>{{ re }}</tt>
