--- a/templates/hennkann.html
+++ b/templates/hennkann.html
@@ -54,7 +54,11 @@
 <div id="sidebar">
     <h2>リンク</h2>
     <a href="help.html"><p>Help</p></a>
-    <a href="query"><p>Query</p></a>
+    <a href="/mine/query"><p>Query</p></a>
     <a href="/mine/line"><p>URL変換</p></a>
+    <a href="/accounts/login"><p>ログイン</p></a>
+    <a href="/accounts/logout"><p>ログアウト</p></a>
+    <a href="/mine/script"><p>スクリプトの実行</p></a>
+    <a href="/mine/code"><p>コードの設定</p></a>
 </div>
 </body>
