--- a/templates/query.html
+++ b/templates/query.html
@@ -1,9 +1,38 @@
-<html>
-  <head>
-    <title>Command Log</title>
-  </head>
-  <body>
-      <h2>概要</h2>
+<!DOCTYPE html>
+<html lang="ja">
+<head>
+    <meta charset="utf-8"/>
+    <title>Query</title>
+    <style>
+        #sidebar {
+        float:right;
+        text-align: left;
+        background-color: gray;
+        color:black;
+        width:30%;
+        height: 90%;
+      }
+      #content {
+        float:left;
+        width:65%;
+      }
+      #header {
+        float:top;
+        text-align: center;
+        height: 10%;
+      }
+      tt {
+        background-color: black;
+        color: white;
+      }
+    </style>
+</head>
+<body>
+<div id="header">
+    <h2>サーバーの情報取得</h2>
+</div>
+<div id="content">
+    <h2>概要</h2>
       <p>IP:{{ ip }},Port:{{ port }}のMinecraftサーバーで</p>
       <p>{{ query }}</p>
       <div style="color: red;">
@@ -70,5 +99,15 @@
           <th style="color: red;">{{ error_t }}</th>
         </tr>
       </table>
-  </body>
-</html>
+</div>
+<div id="sidebar">
+    <h2>リンク</h2>
+    <a href="help.html"><p>Help</p></a>
+    <a href="/mine/query"><p>Query</p></a>
+    <a href="/mine/line"><p>URL変換</p></a>
+    <a href="/accounts/login"><p>ログイン</p></a>
+    <a href="/accounts/logout"><p>ログアウト</p></a>
+    <a href="/mine/script"><p>スクリプトの実行</p></a>
+    <a href="/mine/code"><p>コードの設定</p></a>
+</div>
+</body>
