--- a/rconc/templates/temp.html
+++ b/rconc/templates/temp.html
@@ -19,13 +19,6 @@
         text-align: center;
         height: 10%;
       }
-      @font-face{
-        font-family: "myfont";
-        src: local("PixelMplus10-Bold");
-      }
-      .myfonts{
-        font-family: "myfont";
-      }
     </style>  
   </head>
   <body>
@@ -34,14 +27,9 @@
       </div>
       <div id="side">
         <h2>リンク</h2>
-    <h2>リンク</h2>
-    <a href="help.html"><p>Help</p></a>
-    <a href="/mine/query"><p>Query</p></a>
-    <a href="/mine/line"><p>URL変換</p></a>
-    <a href="/accounts/login"><p>ログイン</p></a>
-    <a href="/accounts/logout"><p>ログアウト</p></a>
-    <a href="/mine/script"><p>スクリプトの実行</p></a>
-    <a href="/mine/code"><p>コードの設定</p></a>
+        <a href="help.html"><p>Help</p></a>
+        <a href="/mine/query"><p>Query</p></a>
+        <a href="/mine/line"><p>URL変換</p></a>
     </div>
       <div id="con">
       <h2>概要</h2>
@@ -52,7 +40,7 @@
       <p>{{ error }}</p>
       </div>
       <h3>Log:</h3>
-      <div style="background-color: black;color: white; font:menu;">
+      <div style="background-color: black;color: white;">
       <tt>>>> {{ command }}</tt><br>
       <tt>{{ return }}</tt>
       </div>
@@ -81,14 +69,6 @@
         <tr>
           <th>エラー</th>
           <th>{{ he }}</th>
-        </tr>
-        <tr>
-          <th>リクエストユーザー</th>
-          <th>{{ ru }}</th>
-        </tr>
-        <tr>
-          <th>コンフィグユーザー</th>
-          <th>{{ cu }}</th>
         </tr>
       </table>
       </div>
