--- a/templates/config.html
+++ b/templates/config.html
@@ -42,6 +42,8 @@
     <a href="/accounts/logout"><p>ログアウト</p></a>
     <a href="/mine/script"><p>スクリプトの実行</p></a>
     <a href="/mine/code"><p>コードの設定</p></a>
+    <h2>状態</h2>
+    <p>ログインしているユーザー:{{ user_name }}</p>
     </div>
       <div id="con">
       <h2>概要</h2>
