--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,13 +1,46 @@
-{% if form.errors %}
+<!DOCTYPE html>
+<html lang="ja">
+<head>
+    <meta charset="utf-8"/>
+    <title>Query</title>
+    <style>
+        #sidebar {
+        float:right;
+        text-align: left;
+        background-color: gray;
+        color:black;
+        width:30%;
+        height: 90%;
+      }
+      #content {
+        float:left;
+        width:65%;
+      }
+      #header {
+        float:top;
+        text-align: center;
+        height: 10%;
+      }
+      tt {
+        background-color: black;
+        color: white;
+      }
+    </style>
+</head>
+<body>
+<div id="header">
+    <h2>サーバーの情報取得</h2>
+</div>
+<div id="content">
+    {% if form.errors %}
 <p>Your username and password didn't match. Please try again.</p>
 {% endif %}
 
 {% if next %}
     {% if user.is_authenticated %}
-    <p>Your account doesn't have access to this page. To proceed,
-    please login with an account that has access.</p>
+    <p style="colot: red;">ユーザー名とパスワードが一致しません。</p>
     {% else %}
-    <p>Please login to see this page.</p>
+    <p>ログインすることでこのページを閲覧できます。</p>
     {% endif %}
 {% endif %}
 
@@ -27,4 +60,17 @@
 <input type="submit" value="login">
 <input type="hidden" name="next" value="{{ next }}">
 </form>
-
+</div>
+<div id="sidebar">
+    <h2>リンク</h2>
+    <a href="help.html"><p>Help</p></a>
+    <a href="/mine/query"><p>Query</p></a>
+    <a href="/mine/line"><p>URL変換</p></a>
+    <a href="/accounts/login"><p>ログイン</p></a>
+    <a href="/accounts/logout"><p>ログアウト</p></a>
+    <a href="/mine/script"><p>スクリプトの実行</p></a>
+    <a href="/mine/code"><p>コードの設定</p></a>
+    <h2>状態</h2>
+    <p>ログインしているユーザー:{{ user_name }}</p>
+</div>
+</body>
