--- a/templates/script.html
+++ b/templates/script.html
@@ -46,5 +46,7 @@
     <a href="/accounts/logout"><p>ログアウト</p></a>
     <a href="/mine/script"><p>スクリプトの実行</p></a>
     <a href="/mine/code"><p>コードの設定</p></a>
+    <h2>状態</h2>
+    <p>ログインしているユーザー:{{ user_name }}</p>
 </div>
 </body>
