--- a/templates/query.html
+++ b/templates/query.html
@@ -101,15 +101,16 @@
       </table>
 </div>
 <div id="sidebar">
-    <h2>リンク</h2>
-    <a href="help.html"><p>Help</p></a>
-    <a href="/mine/query"><p>Query</p></a>
-    <a href="/mine/line"><p>URL変換</p></a>
-    <a href="/accounts/login"><p>ログイン</p></a>
-    <a href="/accounts/logout"><p>ログアウト</p></a>
-    <a href="/mine/script"><p>スクリプトの実行</p></a>
-    <a href="/mine/code"><p>コードの設定</p></a>
-    <h2>状態</h2>
-    <p>ログインしているユーザー:{{ user_name }}</p>
+  <h2>リンク</h2>
+  <a href="/mine/help"><p>Help</p></a>
+  <a href="/mine/query"><p>Query </p></a>
+  <a href="/accounts/login"><p>ログイン</p></a>
+  <a href="/accounts/logout"><p>ログアウト</p></a>
+  <a href="/mine/script"><p>スクリプトの実行</p></a>
+  <a href="/mine/code"><p>コードの設定</p></a>
+  <a href="/mine/console"><p>コンソールクライアント</p></a>
+  <h2>状態</h2>
+  <p>ログインしているユーザー:{{ user_name }}</p>
+  <a href="/mine/profile"><p>ぷろふぃる</p></a>
 </div>
 </body>
