[modify]views.py
・パスワードを設定できるように変更。
・コードの可読性の向上
・一部問題のある変数名の修正。
・コードを定期的に実行する機能を廃止、類似機能実装予定。
・コンソールからQueryを試験的に飛ばせるように変更、近日改装。
・開発機の移行。

--- a/templates/config_page.html
+++ b/templates/config_page.html
@@ -39,6 +39,7 @@
     <p>Server IP:<input id="box2" type="text" value="" name="ip"></p>
     <p>Server Query Port:<input id="box3" type="text" value="" name="qport"></p>
     <p>Server Rcon Port:<input id="box4" type="text" value="" name="rport"></p>
+    <p>Server Rcon Passward:<input id="box4" type="text" value="" name="passw"></p>
     <input id="box4" type="submit" value="Save">
     </form>
 {{ debug }}
