--- a/templates/script.html
+++ b/templates/script.html
@@ -3,29 +3,7 @@
 <head>
     <meta charset="utf-8"/>
     <title>スクリプト実行</title>
-    <style>
-        #sidebar {
-        float:right;
-        text-align: left;
-        background-color: gray;
-        color:black;
-        width:30%;
-        height: 90%;
-      }
-      #content {
-        float:left;
-        width:65%;
-      }
-      #header {
-        float:top;
-        text-align: center;
-        height: 10%;
-      }
-      tt {
-        background-color: black;
-        color: white;
-      }
-    </style>
+    <link href="/static/style.css" rel="stylesheet">
 </head>
 <body>
 <div id="header">
