--- a/templates/console2.html
+++ b/templates/console2.html
@@ -9,7 +9,11 @@
 </head>
 <body>
 <div id="header">
-    <h2><a href="/" style="color:white;">Home</a></h2>
+  <dev id="header-logo"><h2><a href="/mine/" style="color:white;">Home</a></h2></dev>
+<dev id="header-list">
+<a href="/mine/profile" style="color:white;">{{ request.user }}</a> / 
+<a href="/accounts/logout" style="color:white;">ログアウト</a>
+
 </div>
 <div id="content">
     <ul>
@@ -46,9 +50,6 @@
     <li><a href="/mine/config"><p>設定</p></a></li>
     <li><a href="/mine/console"><p>コンソールクライアント</p></a></li>
     </ul>
-    <h2>状態</h2>
-    <p>ログインしているユーザー:{{ user_name }}</p>
-    <a href="/mine/profile"><p>ぷろふぃる</p></a>
 </div>
 <script>
 document.getElementById("box").focus();
