--- a/templates/console2.html
+++ b/templates/console2.html
@@ -41,15 +41,11 @@
 <div id="sidebar">
     <h2>リンク</h2>
     {{ debug }}
-    <ul>
-    <li><a href="/mine/help"><p>Help</p></a></li>
-    <li><a href="/mine/query"><p>Query </p></a></li>
-    <li><a href="/accounts/login"><p>ログイン</p></a></li>
-    <li><a href="/accounts/logout"><p>ログアウト</p></a></li>
-    <li><a href="/mine/script"><p>スクリプトの実行</p></a></li>
-    <li><a href="/mine/config"><p>設定</p></a></li>
-    <li><a href="/mine/console"><p>コンソールクライアント</p></a></li>
-    </ul>
+<a href="/mine/help"><p>Help</p></a>
+  <a href="/mine/query"><p>Query </p></a>
+  <a href="/mine/script"><p>スクリプトの実行</p></a>
+  <a href="/mine/config"><p>設定</p></a>
+  <a href="/mine/console"><p>コンソールクライアント</p></a>
 </div>
 <script>
 document.getElementById("box").focus();
