--- a/templates/query.html
+++ b/templates/query.html
@@ -20,7 +20,7 @@
       </div>
       <h3>結果</h3>
       <table border="1">
-        <tr bgcolor="gray">
+        <tr style="background-color:gray;">
           <th>名前</th>
           <th>項目</th>
         </tr>
@@ -82,13 +82,8 @@
   <h2>リンク</h2>
   <a href="/mine/help"><p>Help</p></a>
   <a href="/mine/query"><p>Query </p></a>
-  <a href="/accounts/login"><p>ログイン</p></a>
-  <a href="/accounts/logout"><p>ログアウト</p></a>
   <a href="/mine/script"><p>スクリプトの実行</p></a>
-  <a href="/mine/code"><p>コードの設定</p></a>
+  <a href="/mine/config"><p>コードの設定</p></a>
   <a href="/mine/console"><p>コンソールクライアント</p></a>
-  <h2>状態</h2>
-  <p>ログインしているユーザー:{{ user_name }}</p>
-  <a href="/mine/profile"><p>ぷろふぃる</p></a>
 </div>
 </body>
