--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -6,12 +6,20 @@
     <link href="/static/style.css" rel="stylesheet">
 </head>
 <body>
-<div id="header">
-    <h2>サーバーの情報取得</h2>
-</div>
+    <div id="header">
+        <dev id="header-logo"><h2><a href="/mine/" style="color:white;">Home</a></h2></dev>
+      <dev id="header-list">
+      {% if user.is_authenticated %}
+      <a href="/mine/profile" style="color:white;">{{ request.user }}</a> / 
+      <a href="/accounts/logout" style="color:white;">ログアウト</a>
+      {% else %}
+      <a href="/mine/profile" style="color:white;">ログイン</a> / 
+      <a href="/accounts/logout" style="color:white;">ログアウト</a>
+      {% endif %}
+      </div>
 <div id="content">
     {% if form.errors %}
-<p>Your username and password didn't match. Please try again.</p>
+    <p style="color: red;">ユーザー名とパスワードが一致しません。</p>
 {% endif %}
 
 {% if next %}
@@ -44,13 +52,8 @@
   <a href="/mine/help"><p>Help</p></a>
   <a href="/mine/query"><p>Query </p></a>
   <a href="/mine/line"><p>URL変換</p></a>
-  <a href="/accounts/login"><p>ログイン</p></a>
-  <a href="/accounts/logout"><p>ログアウト</p></a>
   <a href="/mine/script"><p>スクリプトの実行</p></a>
-  <a href="/mine/code"><p>コードの設定</p></a>
+  <a href="/mine/config"><p>コードの設定</p></a>
   <a href="/mine/console"><p>コンソールクライアント</p></a>
-  <h2>状態</h2>
-  <p>ログインしているユーザー:{{ user_name }}</p>
-  <a href="/mine/profile"><p>ぷろふぃる</p></a>
 </div>
 </body>
