--- a/templates/index.html
+++ b/templates/index.html
@@ -38,14 +38,7 @@
     <p> サーバーの設定を保存します。</p>
     <h1>Licence</h1>
     <p>Created by <a href="https://github.com/ocean0801" style="color:white;">ocean0801</a></p>
-    <p>Contribution by MoonsApps,Google.com</p>
+    <p>Use MoonsApps,Google.com</p>
 </div>
-<div id="sidebar">
-    <h2>リンク</h2>
-    <a href="/mine/help"><p>Help</p></a>
-    <a href="/mine/query"><p>Query </p></a>
-    <a href="/mine/script"><p>スクリプトの実行</p></a>
-    <a href="/mine/config"><p>設定</p></a>
-    <a href="/mine/console"><p>コンソールクライアント</p></a>
-  </div>
+{% include "sidebar.html" %}
 </body>
