--- a/templates/profileac.html
+++ b/templates/profileac.html
@@ -27,12 +27,5 @@
     <span onmouseover="this.innerText='{{ passw }}'" onmouseout="this.innerText='マウスを載せてパスワードを表示'">マウスを載せてパスワードを表示</span>
 
 </div>
-<div id="sidebar">
-  <h2>リンク</h2>
-  <a href="/mine/help"><p>Help</p></a>
-  <a href="/mine/query"><p>Query </p></a>
-  <a href="/mine/script"><p>スクリプトの実行</p></a>
-  <a href="/mine/config"><p>設定</p></a>
-  <a href="/mine/console"><p>コンソールクライアント</p></a>
-</div>
+{% include "sidebar.html" %}
 </body>
