--- a/templates/script.html
+++ b/templates/script.html
@@ -15,12 +15,5 @@
     <p>{{ script_field }}</p>
     <tt>{{ re }}</tt>
 </div>
-<div id="sidebar">
-  <h2>リンク</h2>
-  <a href="/mine/help"><p>Help</p></a>
-  <a href="/mine/query"><p>Query </p></a>
-  <a href="/mine/script"><p>スクリプトの実行</p></a>
-  <a href="/mine/config"><p>コードの設定</p></a>
-  <a href="/mine/console"><p>コンソールクライアント</p></a>
-</div>
+{% include "sidebar.html" %}
 </body>
