--- a/templates/script.html
+++ b/templates/script.html
@@ -12,8 +12,8 @@
 <div id="content">
     <p>サイトに書かれているスクリプトを実行します</p>
     <h2>{{ script }}</h2>
-    <p>{{ script_field }}</p>
-    <tt>{{ re }}</tt>
+    <p>>>> {{ script_field }}</p>
+    <p>{{ re }}</p>
 </div>
 {% include "sidebar.html" %}
 </body>
