--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -3,6 +3,6 @@
     <a href="/mine/help"><p>Help</p></a>
     <a href="/mine/query"><p>Query </p></a>
     <a href="/mine/script"><p>スクリプトの実行</p></a>
-    <a href="/mine/config"><p>コードの設定</p></a>
+    <a href="/mine/config"><p>設定</p></a>
     <a href="/mine/console"><p>コンソールクライアント</p></a>
 </div>
