--- a/templates/config_page.html
+++ b/templates/config_page.html
@@ -45,7 +45,14 @@
     </form>
 {{ debug }}
 </div>
-{% include "sidebar.html" %}
+<div id="sidebar">
+  <h2>リンク</h2>
+  <a href="/mine/help"><p>Help</p></a>
+  <a href="/mine/query"><p>Query </p></a>
+  <a href="/mine/script"><p>スクリプトの実行</p></a>
+  <a href="/mine/config"><p>設定</p></a>
+  <a href="/mine/console"><p>コンソールクライアント</p></a>
+</div>
 <script>
 document.getElementById("box1").focus();
 </script>
