--- a/templates/scriptindex.html
+++ b/templates/scriptindex.html
@@ -5,21 +5,28 @@
     <meta charset="utf-8"/>
     <title>スクリプト選択</title>
     <link href="/static/style.css" rel="stylesheet">
+    <style>
+        #on {
+        border-bottom: 2px solid #dee7ec;
+        }
+    </style>
 </head>
 <body>
 <div id="header">
     <h2>スクリプト選択</h2>
 </div>
 <div id="content">
+    <h2 id="on">スクリプトの一覧</h2>
     {% if latest_question_list %}
     <ul>
     {% for question in latest_question_list %}
-        <li><a href="/mine/script/{{ question.id }}/">{{ question.script_name }}</a>:<p>{{ question.script }}</p></li>
+        <li><a href="/mine/script/{{ question.id }}/" style="color:white;">{{ question.script_name }}</a>:<a href="/mine/script/{{ question.id }}/delete" style="color:red;">削除</a>/<a href="/mine/script/edit/{{ question.id }}" style="color:greenyellow;">編集</a><p>{{ question.script }}</p></li>
     {% endfor %}
     </ul>
   {% else %}
-    <p>Code</p>
+    <p>ここには何もないようだ....</p>
 {% endif %}
+<h3><a href="/mine/script_c/" style="color:white;">スクリプトの追加...</a></h3>
 {{ debug }}
 </div>
 {% include "sidebar.html" %}
